--- a/templates/composer.json.dist
+++ b/templates/composer.json.dist
@@ -5,8 +5,8 @@
     "license": "proprietary",
     "authors": [
         {
-            "email": "mahesh721@webkul.com",
-            "name": "Mahesh Singh"
+            "email": " ",
+            "name": " "
         }
     ],
     "require": {},
