--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "webkul/code-generator",
+    "name": "amit/code-generator",
     "description": "module lets you generate models, controller, helpers in seconds so that you can focus more on application logic ",
     "type": "magento2-module",
-    "version": "2.0.5",
+    "version": "1.0.0",
     "license": [
         "proprietary"
     ],
@@ -11,7 +11,7 @@
             "registration.php"
         ],
         "psr-4": {
-            "Webkul\\CodeGenerator\\": ""
+            "Amit\\CodeGenerator\\": ""
         }
     }
 }
