--- a/templates/block/deafult.phtml.dist
+++ b/templates/block/deafult.phtml.dist
@@ -1,9 +1,9 @@
 <?php
 /**
- * Webkul Software.
+ * Amit Software.
  *
- * @package   Webkul_CodeGenerator
- * @author    Mahesh Singh
+ * @package   Amit_CodeGenerator
+ * @author    Amit
  */
 
 // $block %block%
