--- a/templates/email/email.html.dist
+++ b/templates/email/email.html.dist
@@ -1,12 +1,10 @@
 <!--
 /**
- * Webkul Software.
+ * Amit Software.
  *
- * @category   Webkul
+ * @category   Amit
  * @package    %module_name%
- * @author     Webkul
- * @copyright  Copyright (c) Webkul Software Private Limited (https://webkul.com)
- * @license    https://store.webkul.com/license.html
+ * @author     Amit
  */
 -->
 <!--@subject {{var subject}} @-->
